default/objects/Product_Field__c/Product_Field__c.object-meta.xml
<CustomObject>
    <label>Product Field</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Product Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>