default/objects/Product_Field__c/fields/Big_Value__c.field-meta.xml
<CustomField>
    <fullName>Big_Value__c</fullName>
    <label>Big Value</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>