default/objects/Product_Field__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <label>Product Configuration</label>
    <referenceTo>Product_Configuration__c</referenceTo>
    <relationshipLabel>Product Fields</relationshipLabel>
    <relationshipName>Product_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>